Prevent modal text inputs from jumping when keyboard is activated on mobile

--- a/client/style/modal.scss
+++ b/client/style/modal.scss
@@ -13,7 +13,7 @@
     background-color: $secondary-color;
 
     max-width: 30em;
-    margin: 5vh auto;
+    margin: 2em auto;
 
     @include breakpoint($medium-screen) {
         margin: 25vh auto;
